# dfu-util

./: .gitignore  ChangeLog  DEVICES.txt  Makefile.am  README  TODO  autogen.sh  configure.ac
device-logs/: README
doc/: dfu-util.1
src/: Makefile.am  commands.c  commands.h  dfu.c  dfu.h  dfu_file.c  dfu_file.h  dfu_load.c  dfu_load.h  dfuse.c  dfuse.h  dfuse_mem.c  dfuse_mem.h  main.c  portable.h  quirks.c  quirks.h  sam7dfu.c  sam7dfu.h  suffix.c  usb_dfu.h
win/: dfu_util.dsp  dfu_util.dsw
www/: build.html  index.html  simple.css
